<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:theme="@style/Base.Theme.Main">

    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#EEFFFFFF"
        android:padding="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck">

        <TextView
            android:id="@+id/textViewTituloTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp"
            android:text="@string/titulo"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextTitulo"
            style="@android:style/Widget.Material.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewTituloTitulo"
            android:layout_marginTop="8dp"
            android:autofillHints=""
            android:background="@drawable/border_gray"
            android:hint="@string/add_titulo"
            android:inputType="text"
            android:maxLines="1"
            android:minHeight="48dp"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textColorHint="#546E7A"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewDescripcionTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextTitulo"
            android:layout_marginTop="24dp"
            android:text="@string/descripcion"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextDescripcion"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewDescripcionTitulo"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:autofillHints=""
            android:background="@drawable/border_gray"
            android:gravity="top"
            android:hint="@string/add_descripcion"
            android:inputType="textMultiLine"
            android:minHeight="130dp"
            android:textColor="@android:color/black"
            android:textColorHint="#546E7A"
            android:textSize="18sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnGuardar"
            android:layout_width="377dp"
            android:layout_height="73dp"
            android:layout_below="@+id/editTextDescripcion"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/design_default_color_secondary"
            android:maxHeight="30dp"
            android:text="@string/guardar"
            android:textColor="#5E35B1"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="DuplicateSpeakableTextCheck" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
